- updated, added pl translations, converted to UTF
Changed files:
    xdemineur.desktop -> 1.2

--- a/xdemineur.desktop
+++ b/xdemineur.desktop
@@ -5,7 +5,7 @@ Comment[es]=Juego Minesweeper
 Comment[fr]=Jeu de démineur
 Comment[pl]=Gra "Saper" dla X Window System
 Comment[pt]=Jogo Minesweeper
-Comment[tr]=Mayın tarlası oyunu
+Comment[tr]=MayÄ±n tarlasÄ± oyunu
 Icon=xdemineur.png
 Exec=xdemineur
 Type=Application
