- s/^Terminal=0/Terminal=false/ s/^Terminal=1/Terminal=true/ to conform   freedesktop.org desktop-entry specification
Changed files:
    xdemineur.desktop -> 1.3

--- a/xdemineur.desktop
+++ b/xdemineur.desktop
@@ -9,5 +9,5 @@ Comment[tr]=Mayın tarlası oyunu
 Icon=xdemineur.png
 Exec=xdemineur
 Type=Application
-Terminal=0
+Terminal=false
 # vi: encoding=utf-8
