- massive change ( validate errors warrings from desktop-file-validate)   - sed -i 's,Encoding=UTF-8,,g' *.desktop   - sed -i "s,.png,,1" `grep -l 'Icon=[^/].*\.png' *.desktop`   - sed -i "s,MimeType=.*,\0;,g" `grep "MimeType.*semicolon" validate |awk '{print $1}' |tr ":" " "`   - sed -i 's,MapNotify=.*,,g' *.desktop   - sed -i '/^$/d' *.desktop - not all error/warrings validated
Changed files:
    xdemineur.desktop -> 1.7

--- a/xdemineur.desktop
+++ b/xdemineur.desktop
@@ -1,5 +1,4 @@
 [Desktop Entry]
-Encoding=UTF-8
 Name=XDemineur
 Comment[de]=Minesweeper-Game
 Comment[es]=Juego Minesweeper
@@ -7,7 +6,7 @@ Comment[fr]=Jeu de démineur
 Comment[pl]=Gra "Saper" dla X Window System
 Comment[pt]=Jogo Minesweeper
 Comment[tr]=Mayın tarlası oyunu
-Icon=xdemineur.png
+Icon=xdemineur
 Exec=xdemineur
 Type=Application
 Terminal=false
