- added missing Comment
Changed files:
    xdemineur.desktop -> 1.8

--- a/xdemineur.desktop
+++ b/xdemineur.desktop
@@ -1,5 +1,6 @@
 [Desktop Entry]
 Name=XDemineur
+Comment=Minesweeper game
 Comment[de]=Minesweeper-Game
 Comment[es]=Juego Minesweeper
 Comment[fr]=Jeu de démineur
